[workspace]
resolver = "3"
members = [
    "libs/par-exec",
    "libs/par-syntax",
    "projects/parc",
    "projects/parfmt",
    "projects/parls",
    "projects/parm",
    "projects/parup",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
par-exec = { version = "0.1.0", path = "libs/par-exec" }
par-syntax = { version = "0.1.0", path = "libs/par-syntax" }
