[package]
name = "parc"
version.workspace = true
edition.workspace = true

[dependencies]
par-syntax.workspace = true

clap = { version = "*", features = ["derive"] }
lalrpop-util = { version = "0.22.2", features = ["lexer", "unicode"] }
miette = { version = "*", features = ["fancy", "syntect-highlighter"] }
thiserror = { version = "*" }
tokio = { version = "*", features = ["full"] }
