[package]
name = "parc"
version.workspace = true
edition.workspace = true

[dependencies]
par-syntax.workspace = true

anyhow = { version = "*" }
clap = { version = "*", features = ["derive"] }
miette = { version = "*", features = ["fancy", "syntect-highlighter"] }
prettyplease = { version = "*" }
syn = { version = "*", default-features = false, features = [
    "full",
    "parsing",
] }
tokio = { version = "*", features = ["full"] }
quote = { version = "*" }
