[package]
name = "parc"
version.workspace = true
edition.workspace = true

[dependencies]
par-syntax.workspace = true

arcstr = { version = "*" }
anyhow = { version = "*" }
clap = { version = "*", features = ["derive"] }
indexmap = { version = "*" }
miette = { version = "*", features = ["fancy", "syntect-highlighter"] }
prettyplease = { version = "*" }
proc-macro2 = { version = "*" }
syn = { version = "*", default-features = false, features = [
    "full",
    "parsing",
] }
tokio = { version = "*", features = ["full"] }
quote = { version = "*" }
